# bharatcode

./: .gitignore  __main__.py  bharat  create_structure.sh  dev.py  index.html  pyproject.toml  requirements.txt  styles.css
.agents/workflows/: push_to_github.md
src/: README.md  config.py  main.py  orchestrator.py  requirements.txt
src/agents/: autonomous.py  autonomous_expert.py  design_expert_agent.py  design_orchestrator.py  executor.py  executor_expert.py  orchestrator_expert.py  planner.py  planner_expert.py  reviewer.py  reviewer_expert.py
src/agents/langgraph/: __init__.py  edges.py  graph.py  llm.py  memory.py  orchestrator.py  state.py  tools.py
src/agents/langgraph/nodes/: __init__.py  designer.py  executor.py  planner.py  reviewer.py
src/brain/: glm.py  models.py  ollama.py  router.py
src/tools/: file.py  registry.py  shell.py
