[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bharatcode"
version = "1.0.0"
description = "BharatCode: Open-source AI coding agent with multi-model support"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.scripts]
bharat = "main:main"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]
